# simplewealth

./: .flake8  README.md  pyproject.toml
.github/workflows/: ci.yaml  coverage.yaml  static_analysis.yaml
scripts/: static_analysis.sh  static_check.sh  tests.sh
simplewealth/: __init__.py  settings.py
simplewealth/app/: main.py  validation.py
simplewealth/app/pages/: institutions.py
simplewealth/database/: __init__.py  initialization.py  initialize.py  main.py  operations.py  tables.py
simplewealth/database/queries/: institutions.py  operation_types.py
simplewealth/database/tables/: operation_type.py
simplewealth/operation/sql/: operation_type.sql
tests/simplewealth/: test_settings.py
tests/simplewealth/app/: test_app_main.py
tests/simplewealth/app/pages/: test_institutions.py
tests/simplewealth/database/: test_database_main.py  test_initialization.py  test_initialize.py  test_operations.py  test_tables.py
tests/simplewealth/database/queries/: test_institutions_queries.py  test_operation_types_queries.py
tests/simplewealth/database/tables/: test_operation_type.py
