[tool.poetry]
name = "simplewealth"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.1"


[tool.poetry.group.dev.dependencies]
sqlfluff = "^1.4.5"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
mypy = "^1.0.0"
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
