[tool.mypy]
check_untyped_defs = true
disallow_any_expr = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
pythonpath = [
    ".",
]

[tool.coverage.run]
omit = [
    "tests/*",
]

[tool.isort]
# For black compatibility: https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#isort
profile = "black"

[tool.sqlfluff.core]
dialect = "postgres"

[tool.poetry]
name = "simplewealth"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.1"
pydantic = {extras = ["dotenv"], version = "^1.10.4"}
SQLAlchemy = "^2.0.2"
psycopg2 = "^2.9.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
mypy = "^1.0.0"
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
